@@ -20,17 +20,20 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.URI;
+import java.nio.charset.StandardCharsets;
 
 import io.fabric8.kubernetes.client.Config;
 import io.fabric8.kubernetes.client.ConfigBuilder;
 import io.fabric8.kubernetes.client.DefaultKubernetesClient;
 import io.fabric8.kubernetes.client.KubernetesClient;
+import org.apache.commons.io.IOUtils;
 import org.junit.After;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
 import org.junit.Test;
 import org.uberfire.java.nio.file.FileAlreadyExistsException;
 import org.uberfire.java.nio.file.FileSystem;
+import org.uberfire.java.nio.file.NoSuchFileException;
 import org.uberfire.java.nio.file.Path;
 import org.uberfire.java.nio.file.spi.FileSystemProvider;
 import org.uberfire.java.nio.fs.k8s.K8SFileSystemProvider;
@@ -39,8 +42,8 @@ import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 
 public class K8SFileSystemProviderIntegrationTest {
 
-    private static final String KUBERNETES_MASTER_API_URL = "put-your-api-URL";
-    private static final String KUBERNETES_MASTER_API_TOKEN = "put-your-api-token";
+    private static final String KUBERNETES_MASTER_API_URL = System.getProperty(Config.KUBERNETES_MASTER_SYSTEM_PROPERTY);
+    private static final String KUBERNETES_MASTER_API_TOKEN = System.getProperty(Config.KUBERNETES_OAUTH_TOKEN_SYSTEM_PROPERTY);
     private static final String TEST_NAMESPACE = "k8sfsp-test";
     private static KubernetesClient client;
 
@@ -48,8 +51,6 @@ public class K8SFileSystemProviderIntegrationTest {
 
     @BeforeClass
     public static void setup() {
-        System.setProperty(Config.KUBERNETES_MASTER_SYSTEM_PROPERTY, KUBERNETES_MASTER_API_URL);
-        System.setProperty(Config.KUBERNETES_OAUTH_TOKEN_SYSTEM_PROPERTY, KUBERNETES_MASTER_API_TOKEN);
         System.setProperty(Config.KUBERNETES_NAMESPACE_SYSTEM_PROPERTY, TEST_NAMESPACE);
 
         Config config = new ConfigBuilder()
@@ -74,8 +75,6 @@ public class K8SFileSystemProviderIntegrationTest {
     public static void tearDown() {
         client.namespaces().withName(TEST_NAMESPACE).delete();
         client.close();
-        System.clearProperty(Config.KUBERNETES_MASTER_SYSTEM_PROPERTY);
-        System.clearProperty(Config.KUBERNETES_OAUTH_TOKEN_SYSTEM_PROPERTY);
         System.clearProperty(Config.KUBERNETES_NAMESPACE_SYSTEM_PROPERTY);
     }
 
@@ -121,6 +120,16 @@ public class K8SFileSystemProviderIntegrationTest {
         assertThat(readFile(fileInRootFolder)).isEqualTo("Hello");
         createOrEditFile(fileInRootFolder, "Welcome");
         assertThat(readFile(fileInRootFolder)).isEqualTo("Welcome");
+        createOrEditFile(fileInRootFolder, "Hi");
+        assertThat(readFile(fileInRootFolder)).isEqualTo("Hi");
+    }
+
+    @Test(expected = NoSuchFileException.class)
+    public void inputStreamFromNotExistingFileTest() throws IOException {
+        final FileSystem fileSystem = fsProvider.getFileSystem(URI.create("default:///"));
+        Path fileInRootFolder = fileSystem.getPath("/test.txt");
+
+        readFile(fileInRootFolder);
     }
 
     private void createOrEditFile(Path file, String fileContent) throws IOException {
@@ -132,7 +141,7 @@ public class K8SFileSystemProviderIntegrationTest {
 
     private String readFile(Path file) throws IOException {
         try (InputStream fileStream = fsProvider.newInputStream(file)) {
-            return new String(fileStream.readAllBytes());
+            return IOUtils.toString(fileStream, StandardCharsets.UTF_8.name());
         }
     }
 }
